change section to article for semantic html

--- a/index.html
+++ b/index.html
@@ -36,18 +36,36 @@
     </header>
 
     <main>
-      <div class="content">
-        <h2>Showcase</h2>
+      <article class="content">
+        <h1>Showcase</h1>
         <section id="showcase"></section>
-        <h2>Skill</h2>
+        <h1>Skills</h1>
         <section id="skills"></section>
-      </div>
+      </article>
       <aside class="profile">
-        <h2>About</h2>
+        <h1>About</h1>
         <section>
-          <img src="assets/showcase1.jpg" alt="" />
+          <img src="assets/sanja.png" alt="Nila Dwi Sanja" />
           <div>
             <h2>Nila Dwi Sanja</h2>
+            <div class="social">
+              <i class="fa-brands fa-instagram"></i>
+              <a
+                href="https://instagram.com/ndsanja"
+                target="_blank"
+                rel="noopener noreferrer"
+                >ndsanja</a
+              >
+            </div>
+            <div class="social">
+              <i class="fa-brands fa-github"></i>
+              <a
+                href="https://github.com/ndsanja"
+                target="_blank"
+                rel="noopener noreferrer"
+                >ndsanja</a
+              >
+            </div>
           </div>
         </section>
       </aside>
