create responsive using media query

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="top-header">
         <h1 class="title">ND Sanja</h1>
         <nav class="navigation">
-          <ul>
+          <ul class="dekstop">
             <li><a href="#">Home</a></li>
             <li><a href="#shocase">Showcase</a></li>
             <li><a href="#skills">Skils</a></li>
@@ -42,7 +42,7 @@
         <h1>Skills</h1>
         <section id="skills"></section>
       </article>
-      <aside class="profile">
+      <aside class="profile" id="profile">
         <h1>About</h1>
         <section>
           <img src="assets/sanja.png" alt="Nila Dwi Sanja" />
