--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
             <li><a href="#skills">Skils</a></li>
             <li><a href="#profile">About</a></li>
           </ul>
+          <div id="burger">=</div>
+          <ul class="mobile hidden">
+            <li class="menu-item"><a href="#">Home</a></li>
+            <li class="menu-item"><a href="#shocase">Showcase</a></li>
+            <li class="menu-item"><a href="#skills">Skils</a></li>
+            <li class="menu-item"><a href="#profile">About</a></li>
+          </ul>
         </nav>
       </div>
       <div class="hero">
