fix overflow x  on mobile device

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <li><a href="#skills">Skils</a></li>
             <li><a href="#profile">About</a></li>
           </ul>
-          <div id="burger">=</div>
+          <div id="burger">
+            <i class="fa-solid fa-bars" style="font-size: 24px"></i>
+          </div>
           <ul class="mobile hidden">
             <li class="menu-item"><a href="#">Home</a></li>
             <li class="menu-item"><a href="#shocase">Showcase</a></li>
